--- a/Sito/src/app/card4/card4.component.html
+++ b/Sito/src/app/card4/card4.component.html
@@ -1,5 +1,6 @@
-<p>Dark-Blade-the-Dragon-Knight</p>
-<h2>Basic Request</h2>
+<h1>Dark Blade the Dragon Knight</h1>
+
 <button type="button" (click)="makeRequest()">Make Request</button>
-<div *ngIf="loading">loading...</div>
-<pre>{{data | json}}</pre>
+<div *ngIf="loading" style = "color: #D9946C;">loading...</div>
+<img *ngIf="data" src="{{data.data[0].card_images[0].image_url}}" >
+
