--- a/Sito/src/app/generic/generic.component.html
+++ b/Sito/src/app/generic/generic.component.html
@@ -1,4 +1,4 @@
-<h1>Blue Eyes Ultimate Dragon</h1>
+<h1>Generic</h1>
 
 <button type="button" (click)="makeRequest()">Make Request</button>
 <div *ngIf="loading" style = "color: #D9946C;">loading...
@@ -10,7 +10,3 @@
 <img *ngIf="data" src="{{data.data[0].card_sets[0].set_name}}" >
 <img *ngIf="data" src="{{data.data[0].card_sets[0].set_code}}" >
 <img *ngIf="data" src="{{data.data[0].card_sets[0].set_rarity}}" >
-
-
-
-
