--- a/Sito/src/app/app.component.html
+++ b/Sito/src/app/app.component.html
@@ -7,19 +7,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/Blue-Eyes-Ultimate-Dragon"style = "color: #D9946C;" >CARD 1 <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/generic/Blue-Eyes Alternative Ultimate Dragon"style = "color: #D9946C;" >CARD 1 <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/Slifer-the-Sky-Dragon" style = "color: #D9946C;">CARD 2 <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/generic/Slifer the Sky Dragon" style = "color: #D9946C;">CARD 2 <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/Emperor-of-Lightning" style = "color: #D9946C;">CARD 3 <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/generic/Emperor of Lightning" style = "color: #D9946C;">CARD 3 <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/Dark-Blade-the-Dragon-Knight" style = "color: #D9946C;">CARD 4 <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/generic/Dark Blade the Dragon Knight" style = "color: #D9946C;">CARD 4 <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/Galaxy-Eyes-Full-Armor-Photon-Dragon" style = "color: #D9946C;">CARD 5 <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/generic/Galaxy Eyes Full Armor Photon Dragon" style = "color: #D9946C;">CARD 5 <span class="sr-only"></span></a>
       </li>
       
     </ul>
